# copernicus-marine-toolbox

./: .condarc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  ARCO_smaller_area_subset_method_default.nc  CONTRIBUTION.md  Dockerfile.ci  Dockerfile.ci.tests  Dockerfile.ci.tests.tox  Dockerfile.dockerhub  Makefile  README.md  cmems_mod_glo_phy-so_anfc_0.083deg_P1D-m_so_13.00W-5.00E_47.00N-64.00N_0.49m_2025-09-24-2025-09-25.nc  cmems_mod_ibi_phy_my_0.083deg-3D_P1Y-m_thetao_9.83W-9.67W_34.00N-34.17N_0.51-1.56m_1993-01-01-2021-01-01.nc  cmems_mod_ibi_phy_my_0.083deg-3D_P1Y-m_thetao_9.83W-9.67W_34.00N-34.17N_0.51-1.56m_1993-01-01-2021-01-01_(1).nc  conda_environment.yaml  conda_environment_binary-old-linux.yaml  conda_environment_binary.yaml  conda_environment_sphinx.yaml  conda_environment_test.yaml  conda_environment_test_all_datasets.yaml  conda_environment_test_tox.yaml  condaenv.1v88oso2.requirements.txt  med-hcmr-wav-rean-h_VHM0_18.12W-17.00W_38.02N_1993-01-01-1993-01-01.nc  noxfile.py  pip.conf  pre-release.sh  pyproject.toml  release.sh  script.py  test.py  test.txt  tox.ini
.github/workflows/: binaries-old-linux.yml  binaries.yml  binary-test-windows.yml  binary-test.yml  binary-windows.yml  check-format.yml  ci.yml  dependencies-tests.yml  link-PR-doc.yml  message-general-pr.yml  message-prerelease.yml  message-release.yml  pre-release.yml  push-docker-image.yml  release.yml  test_all_datasets.yml  test_arc.yml  test_big_downloads.yml  test_large_downloads.yml  test_large_downloads_windows.yml  tests.yml  tests_on_oss.yml  tests_runners.yml  tox-tests.yml  update_coverage_readme.yml  (+1 more)
.history/: .gitignore_20250623112829  .gitignore_20250623114520
copernicusmarine/: __init__.py  _init_logging.py  _version.py  logger.py  logging_conf.json  logging_conf.py
doc/: Makefile  command-line-interface.rst  conf.py  end-of-life.rst  index.rst  installation.rst  python-interface.rst  response-types.rst
githubforJIRAtests/: file_1.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt
test_github_for_JIRA/: test_file.txt
test_github_for_jira/: dummy_file.txt
tests/: test_arco_service_selection.py  test_cf_compliance.py  test_command_line_interface.py  test_command_line_interface_helper.py  test_command_line_interface_nearest_layer_subset.py  test_command_line_split_on.py  test_dataset_part_selection.py  test_dataset_version_selection.py  test_dependencies_updates.py  test_deprecated_options.py  test_describe.py  test_describe_released_date.py  test_documentation.py  test_duplicate_options.py  test_get.py  test_get_create_file_list.py  test_get_direct_download.py  test_get_index_files_insitu.py  test_get_list_files.py  test_get_sync.py  test_help_command_interface.py  test_login.py  test_longitudes_with_modulus.py  test_mutually_exclusive.py  test_open_dataset_read_dataframe.py  test_originalGrid_datasets.py  test_overwrite_output_data.py  test_python_interface.py  test_query_builder.py  test_raising_error_python_interface.py  test_request_files.py  test_service_selection_arco.py  test_several_metadata_catalogues.py  test_sparse_subset.py  test_sqlite_subsetting.py  test_subfunctions.py  test_subset.py  test_subset_split_on.py  test_subset_updating_date.py  test_utility_functions.py  (+3 more)
tests_binaries/: test_basic_commands.py  test_basic_commands_binaries.py  test_windows_binaries.py
tests_dependencie_versions/: test_basic_commands.py
tests_dependencies_versions/: test_basic_commands.py
tests_extra/: test_basic_commands_binaries.py  test_big_downloads.py  test_large_downloads.py
(+212 files in other folders)
