[tool.poetry]
name = "copernicusmarine"
version = "2.0.0a3"
description = ""
authors = ["Copernicus Marine User Support <servicedesk.cmems@mercator-ocean.eu>"]
readme = "README.md"
packages = [{include = "copernicusmarine"}]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = ">=8.0.4"
requests = ">=2.27.1"
setuptools = ">=68.2.2"
xarray = ">=2023.4.0"
tqdm = ">=4.65.0"
zarr = ">=2.13.3"
dask = ">=2022"
netCDF4 = ">=1.5.4"
boto3 = ">=1.26"
semver = ">=3.0.2"
pystac = ">=1.8.3"
lxml = ">=4.9.0"
numpy = ">=1.23.0,<2.0.0"
pendulum = "^3.0.0"
pydantic = "^2.9.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
types-requests = "^2.27.11"
ipython="^8.14.0"

[tool.poetry.scripts]
copernicusmarine = 'copernicusmarine.command_line_interface.copernicus_marine:command_line_interface'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
