[tool.poetry]
name = "copernicusmarine"
version = "2.0.0"
description = "Command line interface and Python API for accessing Copernicus Marine data and related services."
authors = ["Copernicus Marine User Support <servicedesk.cmems@mercator-ocean.eu>"]
readme = "README.md"
packages = [{include = "copernicusmarine"}]
license = "EUPL-1.2"
repository = "https://github.com/mercator-ocean/copernicus-marine-toolbox"
documentation = "https://toolbox-docs.marine.copernicus.eu/"

[tool.poetry.dependencies]
python = ">=3.9"
click = ">=8.0.4"
requests = ">=2.27.1"
setuptools = ">=68.2.2"
xarray = ">=2023.4.0"
tqdm = ">=4.65.0"
zarr = "^2.13.3"
dask = ">=2022"
boto3 = ">=1.26"
semver = ">=3.0.2"
pystac = ">=1.8.3"
lxml = ">=4.9.0"
numpy = ">=1.23.0"
pydantic = "^2.9.1"
h5netcdf = "^1.4.0"

[tool.poetry.scripts]
copernicusmarine = 'copernicusmarine.command_line_interface.copernicus_marine:command_line_interface'

[tool.poetry.group.dev.dependencies]
types-toml = "^0.10.8.20240310"
pre-commit = "^4.0.1"
types-requests = "^2.27.11"
ipython = "^8.14.0"
types-python-dateutil = "^2.9.0.20241206"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
